# surrogate-gradient-optim-lab

./: .all-contributorsrc  .bumpversion.cfg  .dockerignore  .dvcignore  .editorconfig  .env.example  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .releaserc.json  .safety-policy.json  .secrets.baseline  .semgrepignore  .yamllint.yml  ADVANCED_SDLC_IMPLEMENTATION_GUIDE.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.json  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_FINAL_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_FINAL_SUMMARY.md  AUTONOMOUS_SDLC_IMPLEMENTATION_SUMMARY.md  BACKLOG.md  CHANGELOG.md  CHECKPOINTED_SDLC_COMPLETION.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.production  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SDLC_IMPLEMENTATION_SUMMARY.md  GENERATION4_INTELLIGENT_SYSTEMS_SUMMARY.md  LICENSE_HEADER.txt  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  (+52 more)
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  workspace-setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation.md  feature_request.md  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: ci.yml  dependency-update.yml  performance.yml  release.yml  security.yml
.terragon/: config.yaml  value-metrics.json
automation/: __init__.py  metrics_dashboard.py  quality_gates.py
deployment/: Dockerfile  docker-compose.yml  requirements.txt
deployment/environments/: development.env  production.env  staging.env
deployment/k8s/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
deployment/loadbalancer/: nginx.conf
deployment/monitoring/: alert_rules.yml  grafana_dashboard.json  prometheus.yml
deployment/scripts/: deploy.sh  health_check.sh  rollback.sh
docs/: CI_CD_SETUP.md  DEVELOPMENT.md  GITHUB_WORKFLOWS_SETUP.md  OPERATIONAL_EXCELLENCE.md  ROADMAP.md  SECURITY_GUIDELINES.md  SETUP_REQUIRED.md  WORKFLOW_IMPLEMENTATION_STATUS.md  WORKFLOW_SETUP_GUIDE.md  api-reference.md  examples.md  performance-guide.md  user-guide.md
docs/adr/: 0001-jax-backend-selection.md  0002-surrogate-model-architecture.md  template.md
docs/guides/: developer-guide.md  user-guide.md
docs/monitoring/: README.md
docs/workflows/: MANUAL_SETUP_INSTRUCTIONS.md  README.md
docs/workflows-templates/: README.md  ci.yml
examples/: autonomous_sdlc_complete_demo.py  basic_usage.py  enhanced_integration_example.py  enhanced_research_demo.py  generation1_simple_working_demo.py  generation2_robust_demo.py  generation3_scalable_demo.py  generation4_intelligent_demo.py  production_deployment_ready.py  quality_gates_comprehensive_testing.py  robust_enhanced_demo.py  scalable_performance_demo.py  self_healing_demo.py  simple_enhanced_research_demo.py  simple_working_example.py
scripts/: build.sh  deploy.sh  health-check.py  metrics-collector.py  release.sh  validate-build.sh
surrogate_optim/: __init__.py  __version__.py  benchmarks.py  cli.py  core.py  data.py  distributed.py  models.py  optimizers.py  quality_gates.py  robustness.py  security.py  testing.py  utils.py
surrogate_optim/core/: __init__.py  enhanced_optimizer.py  error_handling.py  scalable_optimizer.py
surrogate_optim/data/: __init__.py  cache.py  collector.py  database.py  persistence.py  preprocessing.py  samplers.py
surrogate_optim/database/: __init__.py  connection.py  migrations.py  models.py  repositories.py  schema.sql
surrogate_optim/distributed/: __init__.py  cluster_manager.py
surrogate_optim/edge/: __init__.py  edge_runtime.py
surrogate_optim/health/: __init__.py  checks.py  endpoints.py  system_monitor.py
surrogate_optim/intelligence/: __init__.py  adaptive_learning.py  ai_quality_gates.py  autonomous_tuning.py  federated_learning.py  meta_optimization.py  predictive_scaling.py
surrogate_optim/models/: __init__.py  base.py  gaussian_process.py  hybrid.py  neural.py  random_forest.py
surrogate_optim/monitoring/: __init__.py  enhanced_logging.py  logging.py  metrics.py
surrogate_optim/observability/: __init__.py  monitoring_dashboard.py  prometheus_metrics.py  tracing.py
surrogate_optim/optimizers/: __init__.py  base.py  gradient_descent.py  multi_start.py  trust_region.py  utils.py
surrogate_optim/performance/: __init__.py  advanced_optimization.py  caching.py  enhanced_performance.py  gpu_acceleration.py  memory.py  optimization.py  parallel.py  profiling.py  research_parallel.py
surrogate_optim/quality/: __init__.py  compliance.py  quality_gates.py  regression_tests.py  security_checks.py  statistical_validation.py
surrogate_optim/research/: __init__.py  enhanced_novel_algorithms.py  experimental_suite.py  novel_algorithms.py  research_execution_engine.py  theoretical_analysis.py  validation_pipeline.py
surrogate_optim/robustness/: __init__.py  circuit_breaker.py  comprehensive_validation.py  error_recovery.py
surrogate_optim/scalability/: __init__.py  auto_scaling.py  load_balancer.py
surrogate_optim/self_healing/: __init__.py  compliance_framework.py  error_handling.py  global_deployment.py  health_diagnostics.py  monitoring_dashboard.py  performance_optimization.py  pipeline_monitor.py  recovery_engine.py  robust_monitoring.py  scalable_architecture.py  security_validation.py  self_healing_optimizer.py
surrogate_optim/validation/: __init__.py  comprehensive_validation.py  convergence_validation.py  input_validation.py  model_validation.py
surrogate_optim/visualization/: __init__.py  basic_plots.py  interactive.py
tests/: __init__.py  conftest.py  test_self_healing.py  test_self_healing_standalone.py
tests/benchmarks/: __init__.py  test_performance.py
tests/fixtures/: __init__.py  benchmark_functions.py  test_data.py
tests/integration/: __init__.py  test_end_to_end_workflows.py  test_robust_workflows.py
tests/unit/: __init__.py  test_data.py  test_fixtures.py  (+6 more)
